# sixauth

./: .gitattributes  .gitignore  .travis.yml  AI GENERATED CODE.txt  Auth.py  AuthBackend.py  AuthBakend.py  Ignorethislol.py  LICENSE  README.md  Req.txt  Update_cert.py  __init__.py  ca-private-key.pem  ca-public-key.pem  cacerts.pem  database.db  module1.py  pyproject.toml  requirements.txt  server-csr.pem  server-key.pem  server-private-key.pem  server-public-key.pem  setup.py  test.py  tree.txt
3DRender/: Resources.txt  __main__.py
Auth/: Core.py  Ignorethislol.py  PreReqs.txt  Settings.txt  __init__.py  __main__.py  getcert.py  test.py
AuthBackend/: __main__.py  server-csr.pem  server-private-key.pem
Canvas/: __init__.py  __main__.py
Matrix/: __init__.py  __main__.py
Menu/: __init__.py  __main__.py
auth/: __init__.py
imports/: authimports.py  randomfuncs.py
imports1/: authimports.py
maxmods/: __init__.py
maxmods.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
menu1/: __main__.py
sixauth/: __init__.py  auth.py  client.py  constants.py  data.py  database.py  datamanager.py  encryption.py  logger.py  main.py  main2.py  server.py  session.py  version.py
sixauth.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: Auth_Test.py  Canvas_test.py  auth_speed_test.py  test.py
tests/: Auth_Test.py  Canvas_test.py  Matrix_Test.py  auth_speed_test.py  authtest2.py  ca-private-key.pem  ca-public-key.pem  classes.py  protocol_test.py  rand_tests.py  server-csr.pem  server-private-key.pem  server_run.py  times.json
(+49 files in other folders)
