# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maxmods"
version = "0.3.0"
description = "A library of all the usefull code snipits I make and maintain"
readme = "README.md"
authors = [{ name = "maxwellewxam", email = "maxwellipe43662@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["auth", "menu", "maxmods"]
dependencies = ['requests',
        'jsonpath-ng',
        'flask_sqlalchemy',
        'flask',
        'flask_restful',
        'cryptography',
        'keyboard',
        'pygame',
        'numpy']
requires-python = ">=3.11"

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/maxwellewxam/maxmods"

[project.scripts]
realpython = ""